--- a/services/blocks/Dockerfile
+++ b/services/blocks/Dockerfile
@@ -1,11 +1,15 @@
-FROM python:3.10-slim-buster
+FROM python:3.10-slim
 
-WORKDIR /app
+ENV PYTHONUNBUFFERED True
+
+ENV APP_HOME /app
+WORKDIR $APP_HOME
+
 
 COPY . .
 
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-EXPOSE 80
-CMD ["python3", "run.py"]
+# EXPOSE $PORT
+CMD exec python3 run.py
